# Youbot_FK_IK_w_rviz

./: .gitmodules  README.md  frames.gv  output.txt
devel/: .catkin  setup.sh
devel/lib/pkgconfig/: robot.pc  youbot_description.pc
devel/lib/robot/: ee
devel/share/robot/cmake/: robotConfig.cmake
devel/share/youbot_description/cmake/: youbot_descriptionConfig.cmake
src/moveit_commander/devel/: .catkin  .rosinstall
src/moveit_commander/src/my_moveit_package/: CMakeLists.txt  package.xml
src/robot/: CMakeLists.txt  README.md  youbot.rviz
src/robot/include/robot/: ee_pose.h
src/robot/launch/: rviz.launch
src/robot/src/: ee_pose.cpp
src/robot/urdf/: extract_dh_ubot.py  urdf_only.txt
src/robot_fk_ik/: README.md
src/robot_fk_ik/include/youbot_kdl/: KDLInterface.h
src/robot_fk_ik/src/: KDLInterface.cpp  plot.py  youbot_kdl.cpp
src/robot_fk_ik/urdf/: DH_parameters_ubot.txt  youbot_arm_only.urdf
